--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,6 @@
 {
   "name": "budge",
+  "version": "0.0.1",
   "description": "Returns the last `n - x` elements where `n` is the length of the list, and `x` is the count of first set of elements; defaults to 1.",
   "main": "budge.js",
   "authors": [
@@ -22,6 +23,6 @@
     "tests"
   ],
   "dependencies": {
-    "raze": "^0.0.5"
+    "raze": "^0.0.8"
   }
 }
