--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "budge",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Returns the last `n - x` elements where `n` is the length of the list, and `x` is the count of first set of elements; defaults to 1.",
   "main": "budge.js",
   "scripts": {
@@ -24,6 +24,8 @@
   },
   "homepage": "https://github.com/volkovasystems/budge#readme",
   "dependencies": {
-    "raze": "0.0.8"
+    "doubt": "^0.2.0",
+    "optfor": "^0.3.0",
+    "raze": "^0.3.0"
   }
 }
