--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,10 @@
 {
   "name": "budge",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Returns the last `n - x` elements where `n` is the length of the list, and `x` is the count of first set of elements; defaults to 1.",
   "main": "budge.js",
+  "support": "budge.support.js",
+  "deploy": "budge.deploy.js",
   "authors": [
     "Richeve S. Bebedor <richeve.bebedor@gmail.com>"
   ],
@@ -23,8 +25,8 @@
     "tests"
   ],
   "dependencies": {
-    "depher": "^0.4.0",
-    "doubt": "^0.4.0",
-    "raze": "^0.5.0"
+    "depher": "^0.5.0",
+    "doubt": "^0.6.0",
+    "raze": "^0.6.0"
   }
 }
