--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,8 @@
 {
   "name": "budge",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "description": "Returns the last `n - x` elements where `n` is the length of the list, and `x` is the count of first set of elements; defaults to 1.",
-  "main": "budge.js",
-  "support": "budge.support.js",
-  "deploy": "budge.deploy.js",
+  "main": "budge.deploy.js",
   "authors": [
     "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
     "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
@@ -27,7 +25,7 @@
   ],
   "dependencies": {
     "depher": "^0.8.0",
-    "doubt": "^0.10.0",
-    "raze": "^0.12.0"
+    "doubt": "^0.14.0",
+    "raze": "^0.16.0"
   }
 }
