--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "budge",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "description": "Returns the last `n - x` elements where `n` is the length of the list, and `x` is the count of first set of elements; defaults to 1.",
   "main": "budge.js",
   "support": "budge.support.js",
   "deploy": "budge.deploy.js",
+  "browser": "budge.deploy.js",
   "scripts": {
     "build": "babel budge.js -o budge.support.js && webpack",
     "test": "mocha budge-test.js"
@@ -22,7 +23,7 @@
   ],
   "author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
   "contributors": [
-  	"John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
   ],
   "license": "MIT",
   "bugs": {
@@ -32,8 +33,8 @@
   "dependencies": {
     "babel-runtime": "^6.22.0",
     "depher": "^0.8.0",
-    "doubt": "^0.10.0",
-    "raze": "^0.12.0"
+    "doubt": "^0.14.0",
+    "raze": "^0.16.0"
   },
   "devDependencies": {
     "babel-cli": "^6.22.2",
@@ -41,6 +42,6 @@
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-latest": "^6.22.0",
     "source-map-loader": "^0.1.6",
-    "webpack": "^1.14.0"
+    "webpack": "^2.2.1"
   }
 }
