--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,9 @@
 {
   "name": "budge",
-  "version": "0.9.0",
+  "version": "0.10.0",
   "description": "Returns the last `n - x` elements where `n` is the length of the list, and `x` is the count of first set of elements; defaults to 1.",
   "main": "budge.deploy.js",
+  "support": "budge.support.js",
   "authors": [
     "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
     "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
@@ -24,8 +25,8 @@
     "tests"
   ],
   "dependencies": {
-    "depher": "^0.10.0",
-    "doubt": "^0.14.0",
-    "raze": "^0.16.0"
+    "depher": "^0.11.0",
+    "doubt": "^0.15.0",
+    "raze": "^0.17.0"
   }
 }
