--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "budge",
-  "version": "0.10.0",
+  "version": "0.11.0",
   "description": "Returns the last `n - x` elements where `n` is the length of the list, and `x` is the count of first set of elements; defaults to 1.",
   "main": "budge.js",
   "support": "budge.support.js",
   "deploy": "budge.deploy.js",
   "browser": "budge.deploy.js",
   "scripts": {
-    "build": "babel budge.js -o budge.support.js && webpack --progress",
+    "build": "babel budge.js --out-file budge.support.js --source-maps && webpack --progress",
     "test": "mocha budge-test.js"
   },
   "repository": {
@@ -31,10 +31,10 @@
   },
   "homepage": "https://github.com/volkovasystems/budge#readme",
   "dependencies": {
-    "babel-runtime": "^6.22.0",
-    "depher": "^0.11.0",
-    "doubt": "^0.15.0",
-    "raze": "^0.17.0"
+    "babel-runtime": "^6.23.0",
+    "depher": "^0.12.0",
+    "doubt": "^0.16.0",
+    "raze": "^0.18.0"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
