--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "budge",
-  "version": "0.14.0",
+  "version": "0.15.0",
   "description": "Returns the last `n - x` elements where `n` is the length of the list, and `x` is the count of first set of elements; defaults to 1.",
   "main": "budge.deploy.js",
   "support": "budge.support.js",
@@ -25,8 +25,9 @@
     "tests"
   ],
   "dependencies": {
-    "depher": "^0.16.0",
-    "doubt": "^0.17.0",
-    "raze": "^0.19.0"
+    "arkount": "^0.0.0",
+    "depher": "^0.18.0",
+    "doubt": "^0.19.0",
+    "raze": "^0.20.0"
   }
 }
