--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "budge",
-  "version": "0.14.0",
+  "version": "0.15.0",
   "description": "Returns the last `n - x` elements where `n` is the length of the list, and `x` is the count of first set of elements; defaults to 1.",
   "main": "budge.js",
   "support": "budge.support.js",
@@ -31,10 +31,11 @@
   },
   "homepage": "https://github.com/volkovasystems/budge#readme",
   "dependencies": {
+    "arkount": "^0.0.0",
     "babel-runtime": "^6.23.0",
-    "depher": "^0.16.0",
-    "doubt": "^0.17.0",
-    "raze": "^0.19.0"
+    "depher": "^0.18.0",
+    "doubt": "^0.19.0",
+    "raze": "^0.20.0"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
