--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,13 @@
 {
   "name": "budge",
-  "version": "0.29.0",
+  "version": "0.30.0",
   "description": "Returns the last `n - x` elements where `n` is the length of the list, and `x` is the count of first set of elements; defaults to 1.",
   "main": "budge.deploy.js",
   "support": "budge.support.js",
   "authors": [
     "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
-    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
+    "Vinse Vinalon <vinsevinalon@gmail.com>"
   ],
   "license": "MIT",
   "keywords": [
@@ -25,8 +26,8 @@
     "tests"
   ],
   "dependencies": {
-    "depher": "^0.33.0",
-    "doubt": "^0.26.0",
-    "raze": "^0.29.0"
+    "depher": "^0.34.0",
+    "doubt": "^0.27.0",
+    "raze": "^0.30.0"
   }
 }
