--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "budge",
-  "version": "0.29.0",
+  "version": "0.30.0",
   "description": "Returns the last `n - x` elements where `n` is the length of the list, and `x` is the count of first set of elements; defaults to 1.",
   "main": "budge.js",
   "support": "budge.support.js",
@@ -23,7 +23,8 @@
   ],
   "author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
   "contributors": [
-    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
+    "Vinse Vinalon <vinsevinalon@gmail.com>"
   ],
   "license": "MIT",
   "bugs": {
@@ -32,13 +33,13 @@
   "homepage": "https://github.com/volkovasystems/budge#readme",
   "dependencies": {
     "babel-runtime": "^6.23.0",
-    "depher": "^0.33.0",
-    "doubt": "^0.26.0",
-    "raze": "^0.29.0"
+    "depher": "^0.34.0",
+    "doubt": "^0.27.0",
+    "raze": "^0.30.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.24.1",
     "source-map-loader": "^0.2.1",
